--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 test.json
 credentials.py
 __pycache__/*
-
+.vscode/
 
 # Created by https://www.gitignore.io/api/visualstudio
 # Edit at https://www.gitignore.io/?templates=visualstudio
