New dotnet core project: [To be continued] to look up the vocabulary using restful API and process the result.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 test.json
 credentials.py
 __pycache__/*
-.vscode/
+.vscode
+credential.local
 
 # Created by https://www.gitignore.io/api/visualstudio
 # Edit at https://www.gitignore.io/?templates=visualstudio
